# bumpyproject

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-pre-releases.yaml  pre-releases.yaml  test.yaml
files/mock_project_a/: pyproject.toml
files/mock_project_a/config/: a_yaml_with_some_text.yaml
files/mock_project_b/: DockerFile  pyproject.toml
src/bumpyproject/: bumper.py  cli_bumpy.py  cli_docker.py  cli_main.py  docker_helper.py  env_vars.py  git_helper.py  github_helper.py  helpers.py  log_utils.py  project.py  py_distro.py  versions.py
tests/: conftest.py  test_basic_bump.py  test_basic_subs.py  test_bump.py  test_cli_checker.py
